Fix edge case of timeline section when browser is too narrow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -787,6 +787,7 @@ a.register-button {
 	background-image: url(../img/main/timeline_bottom.png);
 	background-size: 100% auto;
 	background-position:top center;
+	background-repeat: no-repeat;
 }
 
 #timeline-page .timeline {
